--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@react-spring/web": "^9.7.3",
+    "@tailwindcss/forms": "^0.5.7",
     "contentful": "^10.12.7",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
