--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
+    "@next/font": "^14.2.5",
     "@react-spring/web": "^9.7.3",
     "@tailwindcss/forms": "^0.5.7",
     "contentful": "^10.12.7",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
