--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.22.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@next/font": "^14.2.5",
