--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@tailwindcss/forms": "^0.5.7",
     "contentful": "^10.12.7",
     "emailjs-com": "^3.2.0",
+    "feather-icons-react": "^0.7.0",
     "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
