--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.22.1",
+    "@contentful/rich-text-react-renderer": "^15.22.7",
+    "@contentful/rich-text-types": "^16.8.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@next/font": "^14.2.5",
@@ -19,12 +20,15 @@
     "emailjs-com": "^3.2.0",
     "feather-icons-react": "^0.7.0",
     "gsap": "^3.12.5",
+    "highlight.js": "^11.10.0",
     "next": "14.2.4",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-syntax-highlighter": "^15.5.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4"
   },
