--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "contentful": "^10.12.7",
     "emailjs-com": "^3.2.0",
     "feather-icons-react": "^0.7.0",
+    "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "highlight.js": "^11.10.0",
     "next": "14.2.4",
@@ -27,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.5.0",
     "slick-carousel": "^1.8.1",
